Moved to Java 21 but still build for Java 11 Most Warnings removed